clang/test/BSC/Negative/Coroutine/AwaitExpr/await-expr-if-cond/await-expr-if-cond.cbs
// RUN: %clang_cc1 -internal-isystem %S/../../../../../../lib/Headers/bsc_include -verify %s

#include "../../async-func-read-opposite.hbs"

_Async int f(int start) { 
  int result = start;
  if (_Await read(1) == 1) { // #1
     int a = _Await read(1);
  }
  return result;
}

// expected-error@#1 {{_Await expression is not allowed to appear in condition statement of if statement}}
// expected-error@#1 {{_Await expression is not allowed to appear in binary operator expression}}

int main() {
  return 0;
}